# Ubuntu

Aflevering/: Bin.cpp  Bin.h  CMakeLists.txt  Student.cpp  Student.h  main.cpp
